# medseg3d-research

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  RESEARCH_SUMMARY.md  RESERVOIR_SEGMENTATION.md  pyproject.toml  test_cudaq_backend.py  test_cudaq_simple.py  test_qrc_pipeline.py  train_paloalto.py  train_reservoir_5fold.py  train_reservoir_v2.py
.agentic/: AGENTIC_WORKFLOW.md
.agentic/skills/code-execution/: SKILL.md
.agentic/skills/paper-writing/: SKILL.md
.agentic/skills/research-medseg/: SKILL.md
.agentic/skills/research-qrc/: SKILL.md
.agents/: WORKFLOW.md
.agents/code-execution/: SKILL.md
.agents/paper-writing/: SKILL.md
.agents/research-medseg/: SKILL.md
.agents/research-qrc/: SKILL.md
.github/workflows/: ci.yml
.kiro/specs/phase1-foundation-setup/: design.md  requirements.md  (+1 more)
.kiro/steering/: development.md  product.md  structure.md  tech.md
.openclaw/: openclaw.plugin.json  qrc-ev-plugin.ts
configs/: base.yaml  demo.yaml  extended_demo.yaml  test_cudaq.yaml  test_cudaq_small.yaml  test_pipeline.yaml
docs/: ARCHITECTURE.md  COMPREHENSIVE_ANALYSIS_REPORT.md  EXPERIMENT_REPORT_2026-02-09.md  EXPERIMENT_REPORT_2026-02-09_v2.md  FINAL_EXPERIMENT_REPORT.md  FINAL_RESULTS_REPORT.md  IMPLEMENTATION_PLAN_BACKENDS.md  MTS_QRC_EXPERIMENT_REPORT.md  PHASE3_REPORT.md  PRD.md  ROADMAP.md  datasets.md
paper/: README.md  ROADMAP.md  appendix_hyperparameters.tex  appendix_proofs.tex  build_paper.py  chapter1_introduction.tex  chapter2_background.tex  chapter3_methods.tex  chapter4_experiments.tex  chapter5_results.tex  chapter6_conclusion.tex  main.tex  refs.bib
results/: ablation_study.json  final_test_results.json  fivefold_results.json  lstm_tft_results.json  parallel_experiments.json  phase2_results.json
scripts/: download_data.py  generate_figures.py  generate_final_figures.py  generate_visualizations.py  run_attention_qrc.py  run_direct_time_qrc.py  run_filtered_years.py  run_final_validation.py  run_high_qubit.py  run_hybrid_background.py  run_hybrid_experiments.py  run_improved_qrc.py  run_lstm_comparison.py  run_mts_qrc.py  run_parallel_experiments.py  run_phase2_experiments.py  run_phase3_benchmarks.py  run_pinn_experiments.py  run_pinn_loss.py  run_pinn_v2.py  run_pinn_v3.py  run_quadratic_qrc.py  run_quadratic_qrc_fast.py  run_seasonal_residual.py  run_sota_comparison.py  run_temporal_hybrid.py  run_vq_sweep.py  train_a2_recurrence_free.py  train_a4_polynomial.py  train_a4_sota.py  train_palo_alto_cudaq.py  train_sota_cudaq.py  verify_cudaq_pipeline.py
src/models/: reservoir_nnunet.py  reservoir_skip.py
src/qrc_ev/: __init__.py
tests/: conftest.py
tests/test_agents/: test_eligibility_traces.py  test_oom_model.py
tests/test_backends/: __init__.py  test_base.py  test_cudaq.py  test_pennylane.py
tests/test_data/: test_features.py  test_preprocessor.py  test_synthetic.py
tests/test_encoding/: __init__.py  test_angle.py
tests/test_integration/: __init__.py  test_pipeline.py
tests/test_reservoirs/: __init__.py  test_factory.py  test_recurrence_free.py  test_standard.py
tests/test_utils/: test_config.py  test_seed.py
(+49 files in other folders)
